more visual fixes on mobile

--- a/snipps/styles.css
+++ b/snipps/styles.css
@@ -248,6 +248,7 @@ pre{
         height: 100%;
         overflow: auto;
         padding-top:60px;
+        padding-bottom: 60px;
         min-height: 100vh;
     }
     .heads{
